assets/_layout//maps: add padding to stop zoom button overlapping filters fixes  #1552

--- a/adhocracy-plus/assets/scss/components/_map.scss
+++ b/adhocracy-plus/assets/scss/components/_map.scss
@@ -80,7 +80,7 @@ $map-colour: #0076ae;
     right: 0;
     bottom: 0;
     left: 0;
-    padding: $padding 0;
+    padding: 1.5 * $padding 0;
 }
 
 .marker-cluster {
